* database -> dbname for replace ambiguous

--- a/src/JDBCConfig.properties
+++ b/src/JDBCConfig.properties
@@ -1,12 +1,12 @@
 
 # mysql settings
 mysql_driver = com.mysql.jdbc.Driver
-mysql_url = jdbc:mysql://host:port/database
+mysql_url = jdbc:mysql://host:port/dbname
 
 # oracle settings
 oracle_driver = oracle.jdbc.OracleDriver
-oracle_url = jdbc:oracle:thin:@host:port:database
+oracle_url = jdbc:oracle:thin:@host:port:dbname
 
 # postgresql settings
 postgresql_driver = org.postgresql.Driver
-postgresql_url = jdbc:postgresql://host:port/database
+postgresql_url = jdbc:postgresql://host:port/dbname
