converted to gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 /.settings
 /bin
 jdbc2csv-*.jar
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+
+.idea
+.project
+.classpath
+*~
